--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Inter', sans-serif; /* Burada Inter fontunu kullanıyoruz */
+}
